--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\Bomba.cs" />
+     <Compile Include="Assets\Scripts\CameraPrincipal.cs" />
      <Compile Include="Assets\Scripts\Colisor.cs" />
      <Compile Include="Assets\Scripts\Jogador.cs" />
  <Reference Include="UnityEngine.UI">
